# labelmaker

./: README.md  pyproject.toml  reset_db.sh
authentication/management/commands/: wait_for_database.py
authentication/tests/: factories.py  test_admin.py
labels/: admin.py  constants.py  forms.py  models.py  utils.py  views.py
labels/fixtures/: labels_dev.json
labels/migrations/: 0001_initial.py
labels/templates/admin/labels/label/: change_form.html
labels/templates/labels/: label_template.html
labels/tests/: factories.py  test_admin.py  test_models.py  test_utils.py
settings/: asgi.py  common.py  default.py  local.py  test.py  urls.py  wsgi.py
